<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">firstApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Daily_Sports">Head1</string>
    <string name="login">Login</string>
    <string name="sign">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="daily_push">Daily Push</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>

    <string name="user_name">User Name</string>
    <string name="email">Email (optional)</string>
    <string name="description">Whats up dude</string>
    
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Loading please wait&#8230;</string>
    <string name="title">Title goes here!</string>
    <string name="date">Date goes here!</string>
    <string name="desc">Description goes here!</string>
    <string name="linkLabel">Link to web: </string>
    <string name="linkText">Link goes here!</string>

</resources>