<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInScreen" >

    <LinearLayout
        android:id="@+id/signUpWindow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/up_corner_rounding"
            android:drawableLeft="@drawable/mail_l"
            android:hint="@string/email"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/no_corner_rounding"
            android:drawableLeft="@drawable/users_l"
            android:hint="@string/user_name"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#bbbbbb" />

        <EditText
            android:id="@+id/signUpPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/bottom_corner_rounding"
            android:drawableLeft="@drawable/password_l"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="#bbbbbb" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpWindow"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/btn_style_3"
        android:minHeight="40dp"
        android:minWidth="120dip"
        android:onClick="signUp2"
        android:text="@string/sign"
        android:textColor="#c9c9c9"
        android:textSize="15sp" />
    
    <Button
        android:id="@+id/btnSignUpCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignUp2"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style_4"
        android:minHeight="40dp"
        android:minWidth="120dip"
        android:onClick="cancel"
        android:text="@string/cancel"
        android:textColor="#e0eeee"
        android:textSize="15sp" />

</RelativeLayout>