<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >


        <LinearLayout
            android:id="@+id/loginWindow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_window_1"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/loginUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:drawableLeft="@drawable/users_context"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus android:layout_width="match_parent" />
            </EditText>

            <EditText
                android:id="@+id/loginPassWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="30dp"
                android:drawableLeft="@drawable/password_context"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" >

                <requestFocus android:layout_width="match_parent" />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginWindow1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnSignUp1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_style_1"
                    android:minHeight="40dp"
                    android:minWidth="120dp"
                    android:onClick="signUp1"
                    android:text="@string/sign"
                    android:textColor="#454545"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_style_2"
                    android:minHeight="40dp"
                    android:minWidth="120dp"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="#bbe5e5e5"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>